v3.0: 管理员门户 + 动态AI配置 + 用户端精简