@@ -1,14 +1,16 @@
 package com.prompttraining.security;
 
+import com.prompttraining.common.Constant;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 /**
- * 自定义 UserDetails，携带用户 ID
+ * 自定义 UserDetails，携带用户 ID 与角色（V3 新增角色）
  */
 public class UserPrincipal implements UserDetails {
 
@@ -17,17 +19,26 @@ public class UserPrincipal implements UserDetails {
     private final String username;
     private final String password;
     private final boolean enabled;
+    @Getter
+    private final String role;
 
     public UserPrincipal(Long userId, String username, String password, boolean enabled) {
+        this(userId, username, password, enabled, Constant.ROLE_USER);
+    }
+
+    public UserPrincipal(Long userId, String username, String password, boolean enabled, String role) {
         this.userId = userId;
         this.username = username;
         this.password = password;
         this.enabled = enabled;
+        this.role = role != null ? role : Constant.ROLE_USER;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return Constant.ROLE_ADMIN.equals(role)
+                ? List.of(new SimpleGrantedAuthority("ROLE_ADMIN"))
+                : List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
